--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6355,7 +6355,13 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.00.29:
 
+-BUG FIX: Fixed the cached config upgrade mechanism from corrupting the cached config (AND added in checks to locate / repair any previously-corrupted values...sorry!)
+
 -BUG FIX: Fixed heading title resizing (when using the font resizing feature in the sidebar), so they now resize with the other text
+
+-BUG FIX: Fixed a bug that had the ADMIN AREA primary currency settings show the USER AREA settings instead...sorry!
+
+-BUG FIX: Fixed price charts showing properly for exchange APIs that have no trade volume data
 
 -BUG FIX: Miscellaneous fixes
 
@@ -6363,7 +6369,11 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -Added config file formatting error checks (if a significant error that would crash the app is discovered, you are notified, and the current config file is securely backed up / replaced with a 'factory reset' config)
 
--Updated the alphavantage.co stock exchange API daily FREE LEVEL to 25 requests per day (LIVE data will be auto-throttled, so you don't go over your FREE daily limit)
+-Updated the alphavantage.co stock exchange API FREE LEVEL to use A MAXIMUM OF 25 LIVE data requests per day (this is their new free level limit they just revised AGAIN...this is auto-throttled by the app, so you don't go over your limits)
+
+-Added a setting for the alphavantage.co stock exchange API daily FREE LEVEL, to set your DAILY LIMIT lower than the REAL DAILY LIMIT (useful if they lower the limit AGAIN, or you have multiple installs using the same API key)
+
+-Obfuscated any crypto addresses added in the 'address-balance-tracker' plugin, from ever showing in any debug / error logging (only shows the first / last 2 characters for privacy)
 
 -Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)
 
@@ -6383,7 +6393,7 @@ AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.
 v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
 AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.
 
--v6.00.27 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.
+-v6.00.29 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.
 
 -------------------------------------------------------------------
 
