--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -174,16 +174,13 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Modify the "app has been upgraded" interface alert, as we no longer wait AT ALL for scheduled maintenance to update the CACHED app version number (we update it instantly once a new app version is detected). Save a "show message" value to the vars cache, like we do for upgrade alerts (and mark as "don't show" after it has shown).
+Test the 'address-balance-tracker' plugin's NEW AUTOMATED SOLANA SPL TOKEN PRIVACY MODE LOGIC.
 
 
-CACHE an md5 hash of all telegram settings combined, and only delete the chatroom data / refresh it if this md5 hash changes (like we do for light chart config). Otherwise you get a bad UX from endlessly getting alerts to re-enter "/start" in the chatroom EVERYTIME YOU UPDATE *ANY* ADMIN SETTINGS.
+Use the app "Meld" to compare json config files from a fresh reset vs after many user customizations, to assure ordering / structure is not corrupted. Also re-test the upgrade button in general section.
 
 
-Validate news feeds settings interface input / all plugin settings interface inputs.
-
-
-Triple-check the cached config upgrade / downgrade mechanism with the bundled plugins.
+Triple-check the cached config upgrade / downgrade mechanism, ALSO INCLUDING the bundled plugins.
 
 
 Triple-check adding / removing a plugin subdirectory, in regular AND high security mode, AND with plugin activation on AND off.
@@ -195,10 +192,19 @@ Test out the new iframe-reloading HALT mechanism (if a halt was called on updati
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-DO ANOTHER CODE REVIEW OF THE ENTIRE ADMIN CLASS FUNCTIONS.
+Do a bitcoin timestamp of the final v6.00.29 public release.
 
 
 Add a 24 hour time picker, in the recurring reminder plugin settings interface.
+
+
+We should not "default to" a text input in the admin area, as submitting updated data could corrupt certain settings under these circumstances. We should default to a NON FORM ELEMENT, like a large bright red span, saying that field name. That way we still never miss a setting by accident, and if it shows on the page, it should also DISABLE SUBMITTING THE FORM DATA.
+
+
+Below the config reset button, have an expandable tree list with a checkbox next to each entry (including 'all'), for each config subarray key name, including the plug_conf section. Then users can decide which sections to reset, and which to leave alone.
+
+
+DO ANOTHER CODE REVIEW OF THE ENTIRE ADMIN CLASS FUNCTIONS.
 
 
 Have an "Export To Slideshow Crypto Ticker" link on the update portfolio page, which saves a JavaScript array of a user's portfolio, that can be 'dropped into' the main directory of Slideshow Crypto Ticker. Output (in ticker app) should be where trade volume usually is (replacing that). Reuse the 'Export portfolio to spreadsheet' logic for this (obviously with somewhat different output to the file). Maybe also auto-add markets (right in the output file, so they do not need to be added seperately into config.js), ONLY IF THEY DON'T EXIST YET IN THE TICKER APP'S CONFIG.JS FILE.
