fixes, UX, notes, resources page revs
fixes, UX, notes, resources page revs

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -85,6 +85,9 @@ Always set bluefish to "5 spaces" as a tab indentation, and enable indentation o
 ALWAYS TEST UPGRADING on the previous release, TO ASSURE ANY REQUIRED CACHED CONFIG UPGRADING GOES SMOOTHLY!
 
 
+Use the app "Meld" to compare json config files from a fresh reset vs after many user customizations vs after upgrades added / removed, to assure ordering / structure is not corrupted.
+
+
 Try to prioritize building out the admin interface / responsive templates / language translation modules. Then it's the most useful for the maximum number of people as it can be going forward.
 
 
@@ -174,16 +177,10 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Use the app "Meld" to compare json config files from a fresh reset vs after many user customizations, to assure ordering / structure is not corrupted. Also re-test the upgrade button in general section.
-
-
 Test out the new iframe-reloading HALT mechanism (if a halt was called on updating the cached admin config), AND iframe reloading in general.
 
 
 Test the 'address-balance-tracker' plugin's NEW AUTOMATED SOLANA SPL TOKEN PRIVACY MODE LOGIC.
-
-
-Triple-check the cached config upgrade / downgrade mechanism, ALSO INCLUDING the bundled plugins.
 
 
 Triple-check adding / removing a plugin subdirectory, in regular AND high security mode, AND with plugin activation on AND off.
